--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                     <p>Exceptional cuisine crafted with passion</p>
                 </div>
                 <div class="feature">
-                    <i class="fas fa-wine-glass-alt"></i>
-                    <h3>Wine Selection</h3>
-                    <p>Curated collection of premium wines</p>
+                    <i class="fas fa-water-glass-alt"></i>
+                    <h3>water Selection</h3>
+                    <p>Curated collection of premium waters</p>
                 </div>
                 <div class="feature">
                     <i class="fas fa-concierge-bell"></i>
@@ -238,10 +238,10 @@
         </div>
     </section>
 
-    <section id="wine" class="wine-series">
-        <h2>The Manan Wine Collection</h2>
-        <p>Discover our carefully curated selection of exceptional wines, perfectly paired with our menu offerings.</p>
-        <button class="btn-secondary">Explore Wine List</button>
+    <section id="water" class="water-series">
+        <h2>The Manan water Collection</h2>
+        <p>Discover our carefully curated selection of exceptional waters, perfectly paired with our menu offerings.</p>
+        <button class="btn-secondary">Explore water List</button>
     </section>
 
     <section id="contact" class="contact-section">
@@ -309,7 +309,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Manan Restaurant. All rights reserved.</p>
+            <p>&copy; 2025 Manan Restaurant. All rights reserved.</p>
         </div>
     </footer>
 
